Ya se ven los selects en el movil

--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -69,7 +69,7 @@
 			                    <div class="form-group">
 			                        <div class="col-xs-12">
 			                            <label for="cantidad">{% trans "Select modifier" %}</label>
-			                            <select id="cantidad" style="display: none;" class="chosen-select" tabindex="-1">
+			                            <select id="cantidad" class="chosen-select" tabindex="-1">
 			                                <option value="" selected disabled>{% trans "Please select an option" %}</option>
 			                                <option value="Mucho">{% trans "A lot of" %}</option>
 			                                <option value="Poco">{% trans "Some of" %}</option>
@@ -83,7 +83,7 @@
 			                    <div class="form-group">
 			                      <div class="col-xs-12">
 			                            <label for="selec">{% trans "Select your custom constrains" %}</label>
-			                            <select id="selec" style="display: none;"  class="chosen-select">
+			                            <select id="selec" class="chosen-select">
                                             <option value="" selected disabled>{% trans "Please select an option" %}</option>
 			                                {% for cat in list_cat %}
 			                                    <option value= {{ cat.id_foursquare }}>{% trans cat.name %}</option>
