--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -19,7 +19,7 @@
                             <p><i class="fa fa-globe fa-1x"></i> {{trip.city|safe}} ({{trip.country|safe}})</p>
                         </div>
                         <div class="text-justify col-xs-12">
-                            <p>{{trip.publishedDescription|safe|truncatechars:350}}</p>
+                            <p>{{trip.publishedDescription|safe|truncatechars_html:350}}</p>
                         </div>
                         <div class="clearfix"></div>
                         <div class="text-left-center col-xs-12 col-sm-12 col-md-5 col-lg-5">
