Móvil: El alert de confirmacion de planificacion no te deja hacer scroll -> Funcionando Poner en las estadísticas los "no tenemos datos" cuando las listas sean vacías -> Hecho En el titulo de la ventana de iniciar sesion pone "registrarse" -> Hecho Pantalla de error cuando se entra en un viaje publico. -> Eso no ocurre, al menos a mí, Javi. He hecho 3 pruebas, creando, aprobando y editando el viaje. Los datepicker no tienen bien el parámetro. Están intercambiados el mes y el dia -> Eso a mi no me pasa, Javi. He hecho pruebas al editar los viajes y coge las fechas bien

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %} {% trans "Sign in" %} {% endblock %}
+{% block title %} {% trans "Login" %} {% endblock %}
 {% load staticfiles %}
 {% block extrahead %}
 <link rel="stylesheet" href="{% static "css/sign-in.css" %}"> 
